# LibreLingo

./: .all-contributorsrc  .coveragerc  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .pdm-python  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.yaml  .wokeignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Class.js  Hacktoberfest.md  LICENSE  Makefile  Pipfile  Procfile  README.md  Real Time Color Detection.py  SUMMARY.md  \  attributions.md  audios_to_fetch.csv  babel.config.js  commitlint.config.js  coverage.json  cypress.json  db.sqlite3  dump_course_editor_data.sh  fetchAudio.sh  fetchAudios.sh  fetchPhoto.sh  fetchPhotos.sh  free-solid-svg-icons-6.5.1.tgz  image_attributions.csv  (+19 more)
.github/: FUNDING.yml  (+3 more)
apps/librelingo_audios/: pyproject.toml
apps/librelingo_audios/librelingo_audios/: __init__.py  cli.py  functions.py  generate_audios.py  list_missing_audios.py  update_audios.py
apps/librelingo_audios/tests/: conftest.py  test_list_missing_audios.py  test_update_audios.py
apps/librelingo_fakes/: .pdm-python  README.md  pyproject.toml
apps/librelingo_fakes/librelingo_fakes/: __init__.py  fakes.py
apps/librelingo_fakes/src/librelingo_fakes/: __init__.py
apps/librelingo_json_export/: Makefile  README.md  pydoc-markdown.yml  pyproject.toml
apps/librelingo_json_export/librelingo_json_export/: __init__.py  challenge_types.py  challenges.py  cli.py  course.py  dictionary.py  export.py  module.py  skills.py
apps/librelingo_json_export/tests/: test_challenges.py  test_challenges_clean_word.py  test_challenges_define_word.py  test_challenges_get_cards_challenge.py  test_challenges_get_challenges_data.py  test_challenges_get_chips_challenge.py  test_challenges_get_chips_from_phrase.py  test_challenges_get_options_challenge.py  test_challenges_get_phrase_challenges.py  test_challenges_get_short_input_challenge.py  test_challenges_get_word_challenges.py  test_challenges_listening_challenge.py  test_challenges_pairing_challenge.py  test_cli.py  test_course_get_course_data.py  test_dictionary_define_words_in_sentence.py  test_export.py  test_export_course.py  test_export_course_data.py  test_export_course_skills.py  test_export_is_dry_run.py  test_export_prepare_output_path.py  test_export_skill.py  test_integration.py  test_skills_get_skill_data.py  test_utils_get_dumb_opaque_id.py  utils.py
apps/librelingo_json_export/tests/fixtures/fake_course/: course.yaml
apps/librelingo_json_export/tests/fixtures/fake_course/basics/skills/: hello.md  hello.yaml
apps/librelingo_json_export/tests/snapshots/: snap_test_integration.py
apps/librelingo_types/: README.md  pyproject.toml
apps/librelingo_types/librelingo_types/: __init__.py  data_types.py
apps/librelingo_utils/: README.md  pydoc-markdown.yml  pyproject.toml
apps/librelingo_utils/librelingo_utils/: __init__.py  utils.py
apps/librelingo_utils/tests/: test_get_words_from_phrase.py
apps/librelingo_yaml_loader/: README.md  pydoc-markdown.yml  pyproject.toml
apps/librelingo_yaml_loader/librelingo_yaml_loader/: __init__.py  _spelling.py  module.json  skill.json  spelling.py  yaml_loader.py
apps/librelingo_yaml_loader/schemas/: module.json
apps/librelingo_yaml_loader/tests/: test_yaml_load_dictionary.py  test_yaml_loader.py  test_yaml_loader_convert_phrase.py  test_yaml_loader_convert_phrases.py  test_yaml_loader_convert_word.py  test_yaml_loader_convert_words.py  test_yaml_loader_load_dictionary.py  test_yaml_loader_load_modules.py  test_yaml_loader_load_skills.py  testing_utilities.py  utils.py
apps/librelingo_yaml_loader/tests/fixtures/fake_course/basics/skills/: hello.yaml
apps/librelingo_yaml_loader/tests/snapshots/: snap_test_integration.py
apps/tools/: README.md  generate.py  lili-search.py  lili.py  practice.py  pyproject.toml  requirements.txt  translate.py
apps/tools/librelingo_tools/: generate.py  lili-search.py  lili.py  translate.py
apps/tools/librelingo_tools/templates/: converter.html  courses.html  history.html  index.html  missing_words.html  modules.html  skill.html  word.html  words.html
apps/tools/librelingo_tools/templates/central/: header.html
apps/tools/librelingo_tools/templates/incl/: footer.html  header.html
apps/tools/templates/: converter.html  index.html  modules.html
apps/tools/templates/incl/: header.html
apps/tools/tests/: test_real_courses.py  test_test_course.py
apps/tools/tests/fixtures/e2/: course.yaml
apps/tools/tests/fixtures/e2/basics/skills/: hello.yaml
workspaces/liblili2json/: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
workspaces/liblili2json/.dependabot/: config.yml
workspaces/liblili2json/.github/workflows/: constraints.txt  release.yml  tests.yml
workspaces/liblili2json/docs/: conf.py  contributing.rst  index.rst  reference.rst  requirements.txt
workspaces/liblili2json/liblili2json/: __init__.py  challenge_types.py  challenges.py  cli.py  course.py  dictionary.py  export.py  skills.py  types.py  utils.py  yaml.py  yaml_loader.py
workspaces/liblili2json/liblili2json.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workspaces/liblili2json/src/liblili2json/: __init__.py  __main__.py
workspaces/liblili2json/tests/: __init__.py  fakes.py  test_challenges.py  test_cli.py  test_export.py  test_integration.py  test_liblili2json.py  test_main.py  test_yaml.py  test_yaml_loader.py
workspaces/liblili2json/tests/fixtures/fake_course/: course.yaml
workspaces/librelingo_tools/: pyproject.toml
workspaces/librelingo_tools/librelingo_tools/: __init__.py  cli.py  data_types.py  dictionary.py  export.py  skills.py  yaml_loader.py
workspaces/librelingo_tools/librelingo_tools.egg-info/: PKG-INFO  SOURCES.txt
workspaces/librelingo_tools/tests/: fakes.py  test_challenges.py  test_cli.py  test_export.py  test_integration.py  test_librelingo_tools.py  test_yaml_loader.py
workspaces/librelingo_tools/tests/snapshots/: snap_test_integration.py
(+25036 files in other folders)
