[tool.poetry]
name = "librelingo"
version = "0.1.0"
description = ""
authors = ["Dániel Kántor <git@daniel-kantor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-mermaid2-plugin = "^0.6.0"
types-requests = "^2.26.3"

[tool.poetry.dev-dependencies]
librelingo-yaml-loader = { path = "./apps/librelingo_yaml_loader/", develop = true }
librelingo-json-export = { path = "./apps/librelingo_json_export", develop = true }
librelingo-fakes = { path = "./apps/librelingo_fakes", develop = true }
librelingo-utils = { path = "./apps/librelingo_utils", develop = true }
librelingo-audios = { path = "./apps/librelingo_audios", develop = true }
librelingo-types = { path = "./apps/librelingo_types", develop = true }
librelingo-tools = { path = "./apps/tools", develop = true }
pytest = "^7.0.0"
pytest-mock = "^3.5.1"
pytest-watch = "^4.2.0"
mkdocs-material = "^8.0.0"
mkdocs = "^1.2.3"
black = "^21.6b0"
mypy = "^0.942"
types-python-slugify = "^5.0.0"
types-PyYAML = "^6.0.0"
types-bleach = "^5.0.0"
types-Markdown = "^3.3.0"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
yapf = "^0.32.0"
pylint-pytest = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

