[project]
name = "LibreLingo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Kantor", email = "git@daniel-kantor.com"},
]
dependencies = [
    "librelingo-types>=3.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
