[tool.poetry]
name = "librelingo_audios"
version = "1.0.2"
description = "Tools to help getting audios for LibreLingo courses"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
librelingo-yaml-loader = {path = "../librelingo_yaml_loader", develop = true}
librelingo-utils = {path = "../librelingo_utils", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
librelingo-fakes = {path = "../librelingo_fakes", develop = true}
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
