[tool.poetry]
name = "librelingo_fakes"
version = "3.0.0"
description = "Fake data for testing LibreLingo-related packages"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librelingo-types = "^3.0.0"

[tool.poetry.dev-dependencies]
pydoc-markdown = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
