[tool.poetry]
name = "librelingo_types"
version = "3.0.3"
description = "Data types to be used in Python packages for LibreLingo"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pydoc-markdown = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
