[tool.poetry]
name = "librelingo_utils"
version = "0.1.3"
description = "Utilities to be used in LibreLingo-related-packages"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librelingo-types = "^0.1.1"

[tool.poetry.dev-dependencies]
pydoc-markdown = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
