[tool.poetry]
name = "librelingo_utils"
version = "2.6.0"
description = "Utilities to be used in LibreLingo-related-packages"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
librelingo-types = "^3.0.0"
regex = "^2021.11.2"

[tool.poetry.dev-dependencies]
pydoc-markdown = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
