[tool.poetry]
name = "librelingo_yaml_loader"
version = "0.1.3"
description = "Load YAML-based LibreLingo courses in your Python project."
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-slugify = "^4.0.1"
pyfakefs = "^4.3.3"
slugify = "^0.0.1"
pyyaml = "^5.3.1"
snapshottest = "^0.6.0"
click = "^7.1.2"
librelingo-types = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-watch = "^4.2.0"
pylint = "^2.6.0"
pytest-mock = "^3.5.0"
librelingo-fakes = "^0.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
