[tool.poetry]
name = "librelingo-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
Jinja2 = "^3.0.3"
librelingo-json-export = { path = "../librelingo_json_export/", develop = true }
librelingo-yaml-loader = { path = "../librelingo_yaml_loader/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
